WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159688
[Cocoa] Simulated memory warning doesn't trigger libcache purge.
https://bugs.webkit.org/show_bug.cgi?id=159688
Summary
[Cocoa] Simulated memory warning doesn't trigger libcache purge.
Andreas Kling
Reported
2016-07-12 14:15:08 PDT
We're not poking libcache to purge caches in response to fake memory pressure.
Attachments
Patch
(2.97 KB, patch)
2016-07-12 14:16 PDT
,
Andreas Kling
cdumez
: review+
Details
Formatted Diff
Diff
Patch for landing
(2.93 KB, patch)
2016-07-12 20:36 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2016-07-12 14:16:47 PDT
Created
attachment 283446
[details]
Patch
Alexey Proskuryakov
Comment 2
2016-07-12 16:58:27 PDT
Comment on
attachment 283446
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=283446&action=review
> Source/WebCore/platform/MemoryPressureHandler.h:146 > + bool m_isFakeMemoryPressure { false };
What is the official name, "fake" or "simulated"?
Chris Dumez
Comment 3
2016-07-12 16:59:05 PDT
Comment on
attachment 283446
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=283446&action=review
>> Source/WebCore/platform/MemoryPressureHandler.h:146 >> + bool m_isFakeMemoryPressure { false }; > > What is the official name, "fake" or "simulated"?
+1 for simulated
Andreas Kling
Comment 4
2016-07-12 17:04:18 PDT
"simulated" sounds nice, let's call it that instead!
Chris Dumez
Comment 5
2016-07-12 18:27:49 PDT
Comment on
attachment 283446
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=283446&action=review
R=me with comments.
>>> Source/WebCore/platform/MemoryPressureHandler.h:146 >>> + bool m_isFakeMemoryPressure { false }; >> >> What is the official name, "fake" or "simulated"? > > +1 for simulated
Let's rename then.
> Source/WebCore/platform/cocoa/MemoryPressureHandlerCocoa.mm:142 > + m_isFakeMemoryPressure = true;
Can we use WTF TemporaryChange?
Andreas Kling
Comment 6
2016-07-12 19:52:18 PDT
(In reply to
comment #5
)
> Comment on
attachment 283446
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=283446&action=review
> > R=me with comments.
Thanks!
> > Source/WebCore/platform/cocoa/MemoryPressureHandlerCocoa.mm:142 > > + m_isFakeMemoryPressure = true; > > Can we use WTF TemporaryChange?
Unfortunately not, since the reset to false happens in a block that gets called on next runloop.
Andreas Kling
Comment 7
2016-07-12 20:36:19 PDT
Created
attachment 283487
[details]
Patch for landing
WebKit Commit Bot
Comment 8
2016-07-12 21:05:52 PDT
Comment on
attachment 283487
[details]
Patch for landing Clearing flags on attachment: 283487 Committed
r203149
: <
http://trac.webkit.org/changeset/203149
>
WebKit Commit Bot
Comment 9
2016-07-12 21:05:56 PDT
All reviewed patches have been landed. Closing bug.
Andreas Kling
Comment 10
2016-07-13 14:41:58 PDT
<
rdar://problem/25479969
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug