[Cocoa] Simulated memory warning doesn't trigger libcache purge. <https://webkit.org/b/159688>

Reviewed by Chris Dumez.

Since simulated memory warnings will have the "is under memory pressure" flag set,
we were skipping the libcache purge call.

Add a separate flag that tracks whether we're under simulated pressure, and always
prod libcache in that case.

* platform/MemoryPressureHandler.h:
* platform/cocoa/MemoryPressureHandlerCocoa.mm:
(WebCore::MemoryPressureHandler::platformReleaseMemory):
(WebCore::MemoryPressureHandler::install):


Canonical link: https://commits.webkit.org/177849@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203149 268f45cc-cd09-0410-ab3c-d52691b4dbfc