Source/WebCore/platform/cocoa/MemoryPressureHandlerCocoa.mm
@@ -79,7 +79,7 @@ void MemoryPressureHandler::platformReleaseMemory(Critical critical)
     }
 #endif
 
-    if (critical == Critical::Yes && !isUnderMemoryPressure()) {
+    if (critical == Critical::Yes && (!isUnderMemoryPressure() || m_isSimulatedMemoryPressure)) {
         // libcache listens to OS memory notifications, but for process suspension
         // or memory pressure simulation, we need to prod it manually:
         ReliefLogger log("Purging libcache caches");
@@ -139,6 +139,8 @@ void MemoryPressureHandler::install()
 
     // Allow simulation of memory pressure with "notifyutil -p org.WebKit.lowMemory"
     notify_register_dispatch("org.WebKit.lowMemory", &_notifyToken, dispatch_get_main_queue(), ^(int) {
+        m_isSimulatedMemoryPressure = true;
+
 #if ENABLE(FMW_FOOTPRINT_COMPARISON)
         auto footprintBefore = pagesPerVMTag();
 #endif
@@ -160,6 +162,7 @@ void MemoryPressureHandler::install()
         // Since this is a simulation, unset the "under memory pressure" flag on next runloop.
         dispatch_async(dispatch_get_main_queue(), ^{
             MemoryPressureHandler::singleton().setUnderMemoryPressure(wasUnderMemoryPressure);
+            m_isSimulatedMemoryPressure = false;
         });
     });
 
